# io-plugin

./: Cargo.toml  readme.md
derive-io-plugin/: Cargo.toml
derive-io-plugin/src/: lib.rs  variants.rs
example/host-example/: Cargo.toml
example/host-example/src/: main.rs
example/io-plugin-example/: Cargo.toml
example/io-plugin-example/src/: lib.rs
example/plugin-example/: Cargo.toml
example/plugin-example/src/: main.rs
io-plugin/: Cargo.toml
io-plugin-macros/: Cargo.toml
io-plugin-macros/src/: enums.rs  feature_gates.rs  generics.rs  handle.rs  handle_interface.rs  host_interface.rs  interface.rs  lib.rs  plugin_interface.rs  util.rs  variants.rs
io-plugin-tests/: Cargo.toml
io-plugin-tests/src/: lib.rs
io-plugin/src/: error.rs  lib.rs  process.rs  protocol.rs  tokio_exports.rs
