[workspace]
resolver = "2"
members = [
    "io-plugin",
    "io-plugin-macros",
    "example/io-plugin-example",
    "example/host-example",
    "example/plugin-example",
]
default-members = ["io-plugin"]

package.version = "0.4.2"

package.authors = ["Liran Piade"]

package.repository = "https://github.com/lirannl/plugins-io-rs"

package.edition = "2021"

package.license = "GPL-3.0-only"

package.homepage = "https://github.com/lirannl/plugins-io-rs"

package.readme = "readme.md"
