[package]
name = "derive-io-plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
