[package]
name = "derive-io-plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
publish = true
description = "Derive macro for io-plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
