[package]
name = "io-plugin-macros"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4"
quote = "1.0"
regex = "1.10"
syn = "2.0"