[package]
name = "io-plugin-macros"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
publish = true
description = "Macros for io-plugin"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4"
quote = "1.0"
syn = {version = "2.0", features = ["full", "extra-traits"]}
regex = "1.10"
itertools = "0.12"
proc-macro2 = "1.0"
serde = { version = "1.0", default_features = false }