[package]
name = "io-plugin-tests"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
io-plugin = { version = "0.1.0", path = "../io-plugin", features = ["plugin"] }
serde = { version = "1.0", features = ["derive"] }
