[package]
name = "io-plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
publish = true
description = "An stdio-based plugin system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
io-plugin-macros = { version = "0.4.0", path = "../io-plugin-macros" }
lazy_static = "1.4"
rmp-serde = "1.1"
serde_json = "1.0"
tokio = { version = "1.35", default-features = false, features = ["io-util", "sync", "process"] }
thiserror = "1.0"
