[package]
name = "io-plugin"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
publish = true
description = "An stdio-based plugin system"

[dependencies]
io-plugin-macros = { version = "0.5.2", path = "../io-plugin-macros" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
lazy_static = "1.4"
tokio = { version = "1.35", default-features = false, features = ["io-util", "io-std", "sync", "process"] }
