[package]
name = "host-example"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
io-plugin = { path = "../../io-plugin" }
io-plugin-example = { path = "../io-plugin-example" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "io-util",
    "io-std",
] }
regex = "1.10"
lazy_static = "1.4"
serde_json = "1.0"