[package]
name = "host-example"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
io-plugin-example = { path = "../io-plugin-example", features = ["host"] }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "io-util",
    "io-std",
] }
regex = "1.10"
lazy_static = "1.4"