[package]
name = "io-plugin-example"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.30"

io-plugin = { path = "../../io-plugin" }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.35"
rmp-serde = "1.1"
thiserror = "1.0"

[features]
default = ["plugin"]
plugin = []
host = []
