[package]
name = "plugin-example"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-plugin = { path = "../../io-plugin" }
io-plugin-example = { path = "../io-plugin-example" }
tokio = { version = "1.35", features = [ "rt-multi-thread", "macros", "io-util", "sync", "process" ] }